# nervi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
deploy/: Chart.yaml  values.yaml
deploy/templates/: nervi.yaml  ops-stream.yaml
docs/: adr-n-002-dispatch-deduplication.md  architecture.md  integration-test-n4.md
helm/nervi/: .helmignore  Chart.yaml  values.yaml
helm/nervi/templates/: _helpers.tpl  nervi-mcp.yaml  sre-watcher.yaml  stream-provision.yaml
mcp/nervi-mcp/: Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
mcp/nervi-mcp/src/: bus.ts  core.ts  handlers.ts  server.ts
mcp/nervi-mcp/test/: bus.integration.test.ts  core.test.ts  handlers.test.ts
nervi-core/: Cargo.toml
nervi-core/src/: client.rs  lib.rs
nervi-core/tests/: integration.rs
nervi-server/: Cargo.toml
nervi-server/src/: main.rs  mcp.rs
sensors/sre-watcher/: .dockerignore  Dockerfile  package-lock.json  package.json
sensors/sre-watcher/src/: core.ts  k8s.ts  main.ts  publisher.ts  sinks.ts  watcher.ts
sensors/sre-watcher/test/: classify.test.ts  core.test.ts  sinks.test.ts  watcher.test.ts
