[package]
name = "nervi-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-nats = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = "1"

[dev-dependencies]
# Integration tests (tests/) compile as a separate crate and only see
# dev-dependencies, so the bus dependencies are repeated here.
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Used by the integration test to reset the stream to a known-empty state so
# the test is repeatable against a persistent (file-backed) broker.
async-nats = { workspace = true }
